<resources>
    <string name="app_name">NekitKach</string>
    <string name="age">Введите ваш возраст</string>
    <string name="next">Далее</string>
    <string name="activityInfo">Ниже выберите уровень активности, где 1 - минимальный , а 5 - максимальный</string>
    <string name="ageText">Ваш возраст</string>
    <string name="weightText">Ваш вес</string>
    <string name="goal">Ваша цель</string>
    <string name="heightText">Ваш рост</string>
    <string name="genderText">Ваш пол</string>
    <string-array name="typeOfMass">
        <item>Набор мышечной массы</item>
        <item>Похудение</item>
        <item>Поддержка мышечной массы</item>
    </string-array>
    <string name="title_activity_main_menu">main_menu_activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="menu">Меню</string>
    <string name="add">Добавить</string>
    <string name="addBreakfast">Завтрак</string>
    <string name="perekus">Перекус</string>
    <string name="AddDinnerText">Обед</string>
    <string name="addSupper">Ужин</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Применить</string>
</resources>