<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".SetUser">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/ageText" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fields"
        android:fontFamily="@font/roboto_light"
        android:hint="Введите ваш возраст"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:elevation="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/weightText" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fields"
        android:fontFamily="@font/roboto_light"
        android:hint="Введите ваш вес"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:elevation="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/heightText" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fields"
        android:fontFamily="@font/roboto_light"
        android:hint="Введите ваш рост"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:elevation="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/genderText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/input_fields"
            android:orientation="horizontal"
            android:padding="12dp"
            android:elevation="5dp">

            <CheckBox
                android:id="@+id/checkMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:fontFamily="@font/roboto_black"
                android:minHeight="48dp"
                android:onClick="checkChoiceMan"
                android:paddingLeft="8dp"
                android:text="Мужчина"
                android:textColorHighlight="@color/grey"
                android:textColorLink="@color/grey"
                android:textSize="16dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button"
                android:fontFamily="@font/roboto_black"
                android:minHeight="48dp"
                android:onClick="checkChoiceWoman"
                android:paddingLeft="8dp"
                android:text="Женщина"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/first"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/button"-->
<!--                android:fontFamily="sans-serif-medium"-->
<!--                android:text="1" />-->

<!--            <Button-->
<!--                android:id="@+id/second"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/button"-->
<!--                android:fontFamily="sans-serif-medium"-->

<!--                android:text="2" />-->

<!--            <Button-->
<!--                android:id="@+id/third"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/button"-->
<!--                android:fontFamily="sans-serif-medium"-->

<!--                android:text="3" />-->

<!--            <Button-->
<!--                android:id="@+id/fourth"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/button"-->
<!--                android:fontFamily="sans-serif-medium"-->

<!--                android:text="4" />-->

<!--            <Button-->
<!--                android:id="@+id/fifth"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="8dp"-->
<!--                android:layout_marginRight="8dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/button"-->
<!--                android:fontFamily="sans-serif-medium"-->

<!--                android:text="5" />-->
<!--        </LinearLayout>-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/goal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_fields"
        android:orientation="horizontal"
        android:padding="12dp"
        android:elevation="5dp">
    <Spinner
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/black"
        android:entries="@array/typeOfMass"
        android:fontFamily="@font/roboto_black"
        android:minHeight="48dp" />
</LinearLayout>

    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="78dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/roboto_bold"
        android:onClick="nextPage"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16dp" />

    </LinearLayout>
</ScrollView>

