<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondTab"
    android:background="@color/background">

<FrameLayout
    android:id="@+id/secondFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/Breakfast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@drawable/input_fields"
            android:elevation="3dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/addBreakfastText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/addBreakfast"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addBreakfastButton"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/fields_button"
                android:fontFamily="@font/roboto_black"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AfterBreakfast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@drawable/input_fields"
            android:elevation="3dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/addAfterBreakfastText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/perekus"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addAfterBreakfastButton"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/fields_button"
                android:fontFamily="@font/roboto_black"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Dinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@drawable/input_fields"
            android:elevation="3dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/addDinnerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/AddDinnerText"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addDinnerButton"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/fields_button"
                android:fontFamily="@font/roboto_black"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/afterDinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@drawable/input_fields"
            android:elevation="3dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/addFaterDinnerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/perekus"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addAfterDinnerButton"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/fields_button"
                android:fontFamily="@font/roboto_black"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/supper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@drawable/input_fields"
            android:elevation="3dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/addSupperText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/addSupper"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addSupperButton"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/fields_button"
                android:fontFamily="@font/roboto_black"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/afterSupper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@drawable/input_fields"
            android:elevation="3dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/addAfterSupperText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/perekus"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addAfterSupperButton"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/fields_button"
                android:fontFamily="@font/roboto_black"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>

</ScrollView>


